frontend/src/_styles/theme.scss
/* ... */
.tabs-inspector.dark {
  .nav-link.active {
    border-bottom: 1px solid $primary  !important;
  }
}

.tabs-inspector {
  z-index: 2;
  background: white;

  &.dark {
    @extend .bg-dark;
  }
}

.close-icon {
  position: fixed;
  top: 84px;
  right: 3px;
  width: 60px;
  height: 22;
  border-bottom: 1px solid #e7eaef;
  display: flex;
  align-items: center;
  background-color: white;
  z-index: 2;

  .svg-wrapper {
    width: 100%;
    height: 70%;
    display: flex;
    align-items: center;
    justify-content: center;
    border-left: 1px solid #e7eaef;
    margin-left: 20px;

    .close-svg {
      cursor: pointer;
    }
  }
}

.tabs-inspector.nav-tabs {
  border: 0;
  width: 100%;
  padding: 8px 16px;
}

.bg-primary-lt {
  color: #ffffff !important;
  background: #6383db !important;
}

.tabbed-navbar .nav-item.active:after {
  margin-bottom: -0.25rem;
}

.app-name {
  width: 200px;
  left: 84px;
  top: 6px;
  position: absolute;
}

.app-name:hover {
  background: $bg-light;

  &.dark {
    @extend .bg-dark;
  }
}

.nav-auto-save {
  width: 325px;
  left: 485px;
  position: absolute;
  color: #36af8b;
}

.editor-header-actions {
  display: flex;
  color: #868aa5;
  white-space: nowrap;
  font-weight: 400;
  font-size: 12px;
  letter-spacing: 0.5px;

}

.undo-button,
.redo-button {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  padding: 6px;
  gap: 10px;
  width: 28px;
  height: 28px;
  background: #ECEEF0;
  border-radius: 6px;
  margin-right: 5px;
  flex: none;
  order: 0;
  flex-grow: 0;
}

.theme-dark {

  .undo-button,
  .redo-button {
    background: 0;
  }
}

.app-version-menu {
  position: absolute;
  right: 220px;
  padding: 4px 8px;
  min-width: 100px;
  max-width: 300px;
}

.app-version-menu-sm {
  height: 30px;
  display: flex;
  font-size: 12px;
}

.app-version-menu .dropdown-menu {
  left: -65px;
  width: 283px;
}

.app-version-menu .released {
  color: #36af8b;
}

.app-version-menu .released-subtext {
  font-size: 12px;
  color: #36af8b;
  padding: 0 8px;
}

.app-version-menu .create-link {
  margin: auto;
  width: 50%;
  padding-left: 10px;
}

.canvas-background-holder {
  display: flex;
  justify-content: space-between;
  min-width: 120px;
  margin: auto;
  padding: 10px;
}

.canvas-background-picker {
  position: fixed;
}

/**
 * Timer Widget
 */
.timer-wrapper {
  padding: 10px;

  .counter-container {
    font-size: 3em;
    padding-bottom: 5px;
    text-align: center;
  }
}

/**
 * Search Box
 */
.search-box-wrapper {
  input {
    width: 200px;
    border-radius: 5px !important;
    color: var(--slate12) !important;
    background-color: var(--base);
  }

  .input-icon-addon {
    min-width: 0rem !important;
  }

  .input-icon .form-control:not(:first-child),
  .input-icon .form-select:not(:last-child) {
    padding-left: 28px !important;
  }

  input:focus {
    width: 300px;
    background-color: var(--base);
  }

  .input-icon .input-icon-addon {
    display: flex;
  }

  .input-icon .input-icon-addon.end {
    pointer-events: auto;

    .tj-common-search-input-clear-icon {
      display: flex;
      flex-direction: row;
      justify-content: center;
      align-items: center;
      padding: 4px;
      // gap: 8px;
      width: 20px;
      height: 20px;
      background: var(--indigo3) !important;
      border-radius: 4px;
    }

    div {
      border-radius: 12px;
      color: #ffffff;
      padding: 1px;
      cursor: pointer;

      svg {
        height: 14px;
        width: 14px;
      }
    }
  }
}

.searchbox-wrapper {
  margin-top: 0 !important;

  .search-icon {
    margin: 0.30rem
  }

  input {
    border-radius: $border-radius  !important;
    padding-left: 1.75rem !important;
  }
}

.fixedHeader {
  table thead {
    position: -webkit-sticky; // this is for all Safari (Desktop & iOS), not for Chrome
    position: sticky;
    top: 0;
    border-top: 0;
    z-index: 1; // any positive value, layer order is global
  }
}

/**
 * Folder List
 */
.folder-list {
  overflow-y: auto;

  .list-group-transparent .list-group-item.active {
    color: $primary;
    background-color: #edf1ff;

    .folder-ico {
      filter: invert(29%) sepia(84%) saturate(4047%) hue-rotate(215deg) brightness(98%) contrast(111%);
    }
  }

  .folder-ico.dark {
    filter: invert(1);
  }

  .list-group-item {
    padding: 0.5rem 0.75rem;
    overflow: hidden;
  }

  .list-group-item.all-apps-link {
    display: flex;
    align-items: center;
    color: var(--slate12);
    border-radius: 6px;

    &:active {
      background: var(--indigo4);
    }

    &:focus {
      box-shadow: 0px 0px 0px 4px #DFE3E6;
    }
  }

  .folder-info {
    display: contents;
    font-weight: 500 !important;
    display: flex;
    align-items: center;
    letter-spacing: -0.02em;
    text-transform: uppercase;
    color: var(--slate9);
  }

  .folder-create-btn {
    width: 28px;
    height: 28px;
    background: var(--base);
    border: 1px solid;
    border-color: var(--slate7);
    cursor: pointer;
    border-radius: 6px;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .menu-ico {
    cursor: pointer;
    border-radius: 13px;

    img {
      padding: 0px;
      height: 14px;
      width: 14px;
      vertical-align: unset;
    }
  }
}

/**
 * Home page modal
 */
.home-modal-backdrop {
  z-index: 9991;
}
/* ... */

